syntax = "proto3";

package pb;

import "rpc_get_quote.proto";
import "rpc_ship_order.proto";

option go_package = "github.com/Arthur199212/microservices-demo/src/shipping/pb";

service Shipping {
  rpc GetQuote(GetQuoteRequest) returns (GetQuoteResponse) {}
  rpc ShipOrder(ShipOrderRequest) returns (ShipOrderResponse) {}
}
